fix scrollbar issue

--- a/apps/web-ui/app/tailwind.css
+++ b/apps/web-ui/app/tailwind.css
@@ -11,9 +11,11 @@
 @layer base {
   html {
     font-family: InterVariable, 'Helvetica', system-ui, sans-serif;
+    scrollbar-gutter: stable both-edges;
   }
   body {
     padding-left: calc(100vw - 100%);
+    scrollbar-gutter: stable both-edges;
   }
   *,
   ::after,
